@@ -1,12 +1,12 @@
 /**
  * Copyright 2009 The European Bioinformatics Institute, and others.
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,6 +22,8 @@ import java.io.InputStream;
 import java.io.Reader;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.NoSuchElementException;
 
 /**
  * Example URL: https://www.uniprot.org/taxonomy/?query=*&limit=10&format=list
@@ -31,10 +33,22 @@ import java.net.URLEncoder;
  */
 public class UniprotTaxonomyOntologyIterator extends LineOntologyIterator {
 
-    private static String BASE_URL = "https://www.uniprot.org/taxonomy/?format=tab&query=";
+    private static final String BASE_URL = "https://rest.uniprot.org/taxonomy";
+    private static final String STREAM_URL = BASE_URL + "/stream";
+    private static final String PAGINATED_URL = BASE_URL + "/search";
+
+    static {
+        Column.columnString();
+    }
+
+    private URL nextUrl;
 
     public UniprotTaxonomyOntologyIterator(URL url) throws IOException {
         super(url);
+        if (this.header != null && this.header.containsKey("Link")) {
+            String link = this.header.get("Link").get(0);
+            this.nextUrl = new URL(link.substring(link.indexOf("<") + 1, link.indexOf(">")));
+        }
     }
 
     public UniprotTaxonomyOntologyIterator(InputStream is) {
@@ -46,21 +60,40 @@ public class UniprotTaxonomyOntologyIterator extends LineOntologyIterator {
     }
 
     public UniprotTaxonomyOntologyIterator() throws IOException {
-       this("*", 0, -1);
+        this("*");
     }
 
-    public UniprotTaxonomyOntologyIterator(int offset, int limit) throws IOException {
-       this("*", offset, limit);
+    public UniprotTaxonomyOntologyIterator(String query) throws IOException {
+        this(query, null, -1);
     }
 
-    public UniprotTaxonomyOntologyIterator(String query, int offset, int limit) throws IOException {
-       this(query, offset, limit, false);
+    public UniprotTaxonomyOntologyIterator(int limit) throws IOException {
+        this(null, limit);
     }
 
-    public UniprotTaxonomyOntologyIterator(String query, int offset, int limit, boolean onlyReviewed) throws IOException {
-       this(new URL(BASE_URL + URLEncoder.encode(query+(onlyReviewed? " AND reviewed:yes" : ""), "UTF-8") +
-               "&offset=" + offset+
-               "&limit=" + limit));
+    public UniprotTaxonomyOntologyIterator(String cursor, int limit) throws IOException {
+        this("*", cursor, limit);
+    }
+
+    public UniprotTaxonomyOntologyIterator(String query, String cursor, int limit) throws IOException {
+        this(query, cursor, limit, false);
+    }
+
+    public UniprotTaxonomyOntologyIterator(String query, String cursor, int limit, boolean onlyReviewed) throws IOException {
+        this(new URL((limit < 0 ? STREAM_URL : PAGINATED_URL) + "?query=" +
+                URLEncoder.encode(query + (onlyReviewed ? " AND reviewed:true" : ""), StandardCharsets.UTF_8) +
+                Column.columnString() +
+                (limit < 0 ? "" : String.format("&size=%d", limit)) +
+                (cursor == null ? "" : String.format("&cursor=%s", cursor))));
+    }
+
+    public UniprotTaxonomyOntologyIterator nextPage() throws NoSuchElementException, IOException {
+        if (hasNextPage()) return new UniprotTaxonomyOntologyIterator(nextUrl);
+        else throw new NoSuchElementException("The previous page received was the last");
+    }
+
+    public boolean hasNextPage() {
+        return this.nextUrl != null;
     }
 
     @Override
@@ -75,49 +108,34 @@ public class UniprotTaxonomyOntologyIterator extends LineOntologyIterator {
     }
 
     /**
-     * Expected tab-delimited columns:
-     *
-     * <pre>
-     * 0 Taxon
-     * 1 Mnemonic
-     * 2 Scientific Name
-     * 3 Common Name
-     * 4 Synonym
-     * 5 Other Names
-     * 6 Reviewed
-     * 7 Rank
-     * 8 Lineage
-     * 9 Parent
-     * </pre>
-
      * @param line The line to process
      * @return the ontology document
      */
     protected OntologyDocument processLine(String line) {
         String[] cols = line.split("\t");
 
-        String childId = safeGet(cols, 0);
+        String childId = safeGet(cols, Column.ID.index);
 
-        String scientificName = safeGet(cols, 2);
-        String commonName = safeGet(cols, 3);
-        String synonym = safeGet(cols, 4);
-        String[] otherNames = split(safeGet(cols, 5));
+        String scientificName = safeGet(cols, Column.SCIENTIFIC_NAME.index);
+        String commonName = safeGet(cols, Column.COMMON_NAME.index);
+        String synonym = safeGet(cols, Column.SYNONYMS.index);
+        String[] otherNames = split(safeGet(cols, Column.OTHER_NAMES.index));
 
         String childName = scientificName;
-        
+
         /*if (commonName != null && commonName.length() > 0) {
             childName = commonName;
         } else {
             childName = scientificName;
         }*/
 
-        String parentId = safeGet(cols, 9);
+        String parentId = safeGet(cols, Column.PARENT.index);
         String parentName = "";
-        String lineage = safeGet(cols, 8);
+        String lineage = safeGet(cols, Column.LINEAGE.index);
 
         // the parent name is the last element in the lineage
         if (lineage.lastIndexOf(";") > -1) {
-            parentName = lineage.substring(lineage.lastIndexOf(";", lineage.length())+1).trim();
+            parentName = lineage.substring(lineage.lastIndexOf(";") + 1).trim();
         }
 
         OntologyDocument doc = new OntologyDocument("uniprot taxonomy", parentId, parentName,
@@ -133,7 +151,7 @@ public class UniprotTaxonomyOntologyIterator extends LineOntologyIterator {
 
     private String[] split(String s) {
         if (s == null || s.isEmpty()) return new String[0];
-        
+
         return s.split("; ");
     }
 
@@ -144,4 +162,5 @@ public class UniprotTaxonomyOntologyIterator extends LineOntologyIterator {
             return "";
         }
     }
+
 }
